Fix medium-m icon and navbar wrap in header

--- a/css/style.css
+++ b/css/style.css
@@ -96,11 +96,17 @@ section#headline .social ul {
   align-items: center;
 }
 
-section#headline .social i {
+section#headline .social i,
+section#headline .social img {
   margin: 38px 10px;
   font-size: 20px;
   color: #505f79;
   text-align: center;
+}
+
+section#headline .social img {
+  margin: 38px 10px;
+  width: 20px;
 }
 
 section#headline .scroll-down-btn {
